cmake_minimum_required(VERSION 3.21)
# set(CMAKE_TOOLCHAIN_FILE "C:/src/vcpkg/scripts/buildsystems/vcpkg.cmake")
# message(STATUS "Using toolchain file: ${CMAKE_TOOLCHAIN_FILE}.")
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_COMPILER "g++")
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/bin")

project(lab5)
  link_libraries(gdi32)
  add_executable(lab5 src/lab5.cpp)
  include_directories(includes/)
  # find_package(CImg CONFIG REQUIRED)
  # target_link_libraries(main PRIVATE CImg::CImg)

project(lab6)
  link_libraries(gdi32)
  add_executable(lab6 src/lab6.cpp)
  include_directories(includes/)
  # find_package(CImg CONFIG REQUIRED)
  # target_link_libraries(lab7 PRIVATE CImg::CImg)

project(lab6)
  link_libraries(gdi32)
  add_executable(lab7 src/lab7.cpp)
  include_directories(includes/)
  # find_package(CImg CONFIG REQUIRED)
  # target_link_libraries(lab7 PRIVATE CImg::CImg)